--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 Some thing to do:
-add another acceleration to travel speed (yx - plane, z)
+add another acceleration to travel speed (yx - plane, z) - Done
 file with list of gcode files to process
 file with print/printer settings (acceleration, etc ...) 
 output to file
